# telefoncopy

./: .gitignore  flake.nix  gen.sh  pi.env  pyproject.toml
nixos/: configuration.nix  hardware-configuration.nix  wifi.nix
nixos/tests/: x86-vm-test.nix
sounds/dtmf/: generate.sh
sounds/greetings/: LydiaundJan_ampl.aup3
src/: async_audio_test.py  async_button.py  contact.py  run.py  statemachine.py
src/audio_guestbook/: __init__.py  async_audio_test.py  async_button.py  audio_manager.py  contact.py  run.py  run_tel.py  settings.py  statemachine.py
