[project]
name = "audio-guestbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "gpiozero>=2.0.1",
    "sqlmodel>=0.0.24",
    "urllib3>=2.2.3",
    "uvicorn>=0.34.2",
]

[project.scripts]
telephone = "audio_guestbook:run_telephone_input_loop"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
