[project]
name = "audio-guestbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.14",
    "dotenv>=0.9.9",
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
telephone = "audio_guestbook:run_telephone_input_loop"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
